--- a/package.json
+++ b/package.json
@@ -21,10 +21,13 @@
     "axios": "^1.13.2",
     "expo": "~54.0.23",
     "expo-camera": "^17.0.9",
+    "expo-constants": "~18.0.10",
+    "expo-device": "~8.0.9",
     "expo-document-picker": "^14.0.7",
     "expo-file-system": "^19.0.17",
     "expo-font": "~14.0.9",
     "expo-image-picker": "^17.0.8",
+    "expo-notifications": "~0.32.12",
     "expo-status-bar": "~3.0.8",
     "nanoid": "^3.1.20",
     "react": "19.1.0",
