--- a/app.json
+++ b/app.json
@@ -6,13 +6,7 @@
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
-    "newArchEnabled": true,
-    "owner": "ostol",
-    "extra": {
-      "eas": {
-        "projectId": "ostol-mobile-app"
-      }
-    },
+    "newArchEnabled": false,
     "splash": {
       "image": "./assets/splash-icon.png",
       "resizeMode": "contain",
@@ -28,7 +22,6 @@
       },
       "edgeToEdgeEnabled": true,
       "package": "com.ostol.mobile",
-      "googleServicesFile": "./google-services.json",
       "permissions": [
         "NOTIFICATIONS",
         "RECEIVE_BOOT_COMPLETED",
@@ -51,6 +44,11 @@
           "color": "#ffffff"
         }
       ]
-    ]
+    ],
+    "extra": {
+      "eas": {
+        "projectId": "9b1de6bc-a863-4b20-82d4-12b38c0352ba"
+      }
+    }
   }
 }
