--- a/package.json
+++ b/package.json
@@ -13,8 +13,6 @@
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-community/datetimepicker": "^8.4.4",
     "@react-native-community/netinfo": "^11.4.1",
-    "@react-native-firebase/app": "^23.5.0",
-    "@react-native-firebase/messaging": "^23.5.0",
     "@react-navigation/bottom-tabs": "^7.8.4",
     "@react-navigation/native": "^7.1.19",
     "@react-navigation/stack": "^7.6.3",
@@ -22,6 +20,7 @@
     "expo": "~54.0.23",
     "expo-camera": "^17.0.9",
     "expo-constants": "~18.0.10",
+    "expo-dev-client": "~6.0.17",
     "expo-device": "~8.0.9",
     "expo-document-picker": "^14.0.7",
     "expo-file-system": "^19.0.17",
