--- a/app.json
+++ b/app.json
@@ -39,14 +39,7 @@
       "favicon": "./assets/favicon.png"
     },
     "plugins": [
-      "expo-font",
-      [
-        "expo-notifications",
-        {
-          "icon": "./assets/icon.png",
-          "color": "#ffffff"
-        }
-      ]
+      "expo-font"
     ],
     "extra": {
       "eas": {
