Fix Firebase initialization - add googleServicesFile to app.json
🎯 ROOT CAUSE: EAS Build didn't know where to find google-services.json
✅ SOLUTION: Added 'googleServicesFile' path to android config

This tells EAS Build to:
1. Include google-services.json in the build
2. Configure Firebase native SDK properly
3. Initialize Firebase automatically on app startup

Fixes error: 'Default FirebaseApp is not initialized'

--- a/app.json
+++ b/app.json
@@ -27,7 +27,8 @@
         "RECEIVE_BOOT_COMPLETED",
         "VIBRATE"
       ],
-      "useNextNotificationsApi": true
+      "useNextNotificationsApi": true,
+      "googleServicesFile": "./google-services.json"
     },
     "notification": {
       "icon": "./assets/icon.png",
