fix: React Native resizeMode deprecation warnings in mobile app
- Fixed DriverDashboardScreen: Moved resizeMode from Image prop to vehicleImage style
- Fixed SplashScreen: Moved resizeMode from Image prop to logo style
- Added resizeMode: 'cover' to vehicleImage style definition
- Added resizeMode: 'contain' to logo style definition

Resolves React Native deprecation warnings for resizeMode usage.
Note: Image URLs (profile_picture_url, vehicle_image_url) already working correctly from backend.

--- a/app.json
+++ b/app.json
@@ -27,6 +27,7 @@
         "RECEIVE_BOOT_COMPLETED",
         "VIBRATE"
       ],
+      "usesCleartextTraffic": true,
       "useNextNotificationsApi": true,
       "googleServicesFile": "./google-services.json"
     },
