--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "expo-image-picker": "^17.0.8",
     "expo-notifications": "~0.32.12",
     "expo-status-bar": "~3.0.8",
+    "expo-updates": "~29.0.12",
     "nanoid": "^3.1.20",
     "react": "19.1.0",
     "react-native": "0.81.5",
