--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "expo-document-picker": "^14.0.7",
     "expo-file-system": "^19.0.17",
     "expo-font": "~14.0.9",
+    "expo-haptics": "^15.0.8",
+    "expo-image": "^3.0.11",
     "expo-image-picker": "^17.0.8",
     "expo-notifications": "~0.32.12",
     "expo-status-bar": "~3.0.8",
