Split app: Remove admin screens, keep driver-only functionality
- Removed AdminNavigator, admin screens (7 screens)
- Removed LoginTypeScreen, AdminLoginScreen
- Simplified RootNavigator for driver-only auth
- Simplified authStore for driver-only login
- Updated app.json: name=STSC Driver, package=ae.stsc.driver
- Updated DriverLoginScreen UI

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "Ostol Mobile",
-    "slug": "ostol-mobile",
+    "name": "STSC Driver",
+    "slug": "stsc-driver",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -10,10 +10,11 @@
     "splash": {
       "image": "./assets/splash-icon.png",
       "resizeMode": "contain",
-      "backgroundColor": "#001f3f"
+      "backgroundColor": "#2563EB"
     },
     "ios": {
       "supportsTablet": true,
+      "bundleIdentifier": "ae.stsc.driver",
       "runtimeVersion": {
         "policy": "appVersion"
       }
@@ -21,10 +22,10 @@
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
+        "backgroundColor": "#2563EB"
       },
       "edgeToEdgeEnabled": true,
-      "package": "com.ostol.mobile",
+      "package": "ae.stsc.driver",
       "permissions": [
         "NOTIFICATIONS",
         "RECEIVE_BOOT_COMPLETED",
