feat: updates to driver mobile app
- Updated API endpoints and authentication
- Enhanced dashboard and balance screens
- Updated app configuration

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "STSC Driver",
+    "name": "Ostol Drivers",
     "slug": "stsc-driver",
     "version": "1.0.0",
     "orientation": "portrait",
